# BWT_implementation

./: .gitignore  CMakeLists.txt  COMP9319 2020T2 Assignment 2.html  README.md  bwtdecode.c  bwtdecode.cpp  bwtsearch.cpp
